--- a/horari.html
+++ b/horari.html
@@ -7,18 +7,18 @@
     <link rel="stylesheet" href="css/styleshorari.css">
 </head>
 <body>
-    <h1>Horari</h1>
+    <h1>Esliceu</h1>
     <table border="1">
         <tr>
             <td rowspan="2">&nbsp;</td>
             <th colspan="5">grup b</th>
         </tr>
         <tr>
-            <th>dilluns</th>
-            <th>dimarts</th>
-            <th>dimecres</th>
-            <th>dijous</th>
-            <th>divendres</th>
+            <th class="dies">dilluns</th>
+            <th class="dies">dimarts</th>
+            <th class="dies">dimecres</th>
+            <th class="dies">dijous</th>
+            <th class="dies">divendres</th>
         </tr>
         <tr>
             <th>08:15</th>
