--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <a href="tutoriales.html">Tutoriales</a>
         <a href="cursos.html"></a>
         <a href="contacto.html">Contacto</a>
-        <a href="horari.html"></a>
+        <a href="horari/horari.html">Horari</a>
     </nav>
     <section>
         <h2>Formación online a tu ritmo</h2>
