--- a/horari/horari.html
+++ b/horari/horari.html
@@ -6,6 +6,12 @@
     <title>Horaris</title>
     <link rel="stylesheet" href="css/styleshorari.css">
 </head>
+<nav>
+    <a href="../index.html">Inicio</a>
+    <a href="../tutoriales.html">Tutoriales</a>
+    <a href="../cursos.html">Cursos</a>
+    <a href="../contacto.html">Contacto</a>
+</nav>  
 <body>
     <h1>Esliceu</h1>
     <table border="1">
