--- a/curriculum/curriculum.html
+++ b/curriculum/curriculum.html
@@ -27,21 +27,34 @@
             <hr>
             <h2>Formacion</h2>
             <ul>
-                <li>2014-2018 Edudacion Secundaria Obligatoria</li>
-                    <p>- Informacion</p>
-                <li>2018-2020 FP de grau mitja de sistemes microinformatics y xarxes</li>
-                    <p>- Informacion</p>
-                <li>2020-2021 Graduacion en Desarrollo de Aplicaciones Web</li>
-                    <p>- Informacion</p>
+                <li class="formacion">2014-2018 Edudacion Secundaria Obligatoria</li>
+                    <p>- Competencias adquiridas: </p>
+                    <p> Desarrollo de habilidades en matemáticas, ciencias y tecnología, así como en comunicación y trabajo en equipo.</p>
+                    <p>-Logros relevantes:</p>
+                    <p>Finalización con buenas calificaciones, participación en proyectos escolares destacados o concursos académicos.</p>
+                <li class="formacion">2018-2020 FP de grau mitja de sistemes microinformatics y xarxes</li>
+                    <p>- Conocimientos adquiridos:</p>
+                    <P> Instalación y configuración de redes locales (LAN), mantenimiento y reparación de sistemas informáticos, configuración de hardware y software, gestión de sistemas operativos (Windows y Linux), y administración básica de redes.</P>
+                    <P>- Proyectos prácticos:</P>
+                    <P>Creación de una red local para una pequeña empresa, configuración de servidores y mantenimiento de sistemas. Implementación de un sistema de backup y restauración de datos.</P>
+                    <p>- Herramientas:</p>
+                    <p>Windows Server, Linux (Debian/Ubuntu), routers y switches (Cisco), herramientas de virtualización como VMware o VirtualBox.</p>
+                <li class="formacion">2020-2021 Graduacion en Desarrollo de Aplicaciones Web</li>
+                    <p>- Habilidades técnicas:</p>
+                    <p>Desarrollo front-end con HTML5, CSS3, JavaScript, y frameworks como React. Conocimiento en back-end con Node.js, Express, y bases de datos MySQL/MongoDB. Manejo de APIs REST y creación de aplicaciones web dinámicas.</p>
+                    <p>- Proyectos destacados:</p>
+                    <p>Desarrollo de una aplicación web de gestión de usuarios con login, roles y permisos. Creación de una tienda online con carrito de compras y sistema de pago integrado.</p>
+                    <p>- Tecnologías usadas:</p>
+                    <p>React para el front-end, Node.js y Express para el back-end, MySQL/MongoDB para bases de datos, diseño responsivo con Bootstrap, optimización SEO y accesibilidad web.</p>
             </ul>
         </section>
         <section>
             <hr>
             <h2>Experiencia</h2>
             <ul>
-                <li>2022-2024 Desarrollador de paginas web</li>
+                <li class="experiencia">2022-2024 Desarrollador de paginas web</li>
                     <p>- ReactJS, Redux, Node.js, Express, MongoDB</p>
-                <li>Logros</li>
+                <li class="experiencia">Logros</li>
                     <ol>
                         <li>Desarrollo de Proyectos Exitoso</li>
                         <li>Optimización del Rendimiento</li>
