--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <a href="cursos.html"></a>
         <a href="contacto.html">Contacto</a>
         <a href="horari/horari.html">Horari</a>
+        <a href="curriculum/curriculum.html"></a>
     </nav>
     <section>
         <h2>Formación online a tu ritmo</h2>
