--- a/horari/horari.html
+++ b/horari/horari.html
@@ -11,6 +11,8 @@
     <a href="../tutoriales.html">Tutoriales</a>
     <a href="../cursos.html">Cursos</a>
     <a href="../contacto.html">Contacto</a>
+    <a href="../basic_html/basic_html.html">basic-html</a>
+    <a href="../curriculum/curriculum.html">Curriculum</a>
 </nav>  
 <body>
     <h1>Esliceu</h1>
