--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
         <a href="cursos.html"></a>
         <a href="contacto.html">Contacto</a>
         <a href="horari/horari.html">Horari</a>
-        <a href="curriculum/curriculum.html"></a>
+        <a href="curriculum/curriculum.html">Curriculum</a>
+        <a href="basic_html/basic_html.html">Basic-html</a>
     </nav>
     <section>
         <h2>Formación online a tu ritmo</h2>
