--- a/tutoriales.html
+++ b/tutoriales.html
@@ -15,5 +15,8 @@
         <a href="tutoriales.html">Tutoriales</a>
         <a href="cursos.html"></a>
         <a href="contacto.html">Contacto</a>
+        <a href="horari/horari.html">Horari</a>
+        <a href="curriculum/curriculum.html">Curriculum</a>
+        <a href="basic_html/basic_html.html">Basic-html</a>
     </nav>
 </body>
