--- a/curriculum/curriculum.html
+++ b/curriculum/curriculum.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curriculum</title>
+    <nav>
+        <a href="../index.html">Home</a>
+        <a href="../contacto.html">Contacto</a>
+        <a href="../cursos.html">Cursos</a>
+        <a href="../tutoriales.html">Tutoriales</a>
+        <a href="../basic_html/basic_html.html">Basic-html</a>
+        <a href="../horari/horari.html">Horari</a>
+    </nav>
 </head>
 <link rel="stylesheet" href="css/styles.css">
 <body>
