--- a/basic_html/basic_html.html
+++ b/basic_html/basic_html.html
@@ -6,24 +6,27 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <header>
-        <div>
-            <h5>Miquel Suasi</h5>
+    <header class="container">
+        <div class="top">
+            <div class="Logo">
+                <div>[LOGO]</div>
+                <div>Miquel Suasi</div>
+            </div>
+            <nav>
+                <a href="../index.html">Home</a> /
+                <a href="../contacto.html">Contacto</a> /
+                <a href="../cursos.html">Cursos</a> /
+                <a href="../tutoriales.html">Tutoriales</a> /
+                <a href="../curriculum/curriculum.html">Curriculum</a> /
+                <a href="../horari/horari.html">Horari</a>
+            </nav>
         </div>
-        <section>
+        <div class="hero">
             <h1>Front-end Developer</h1>
-            <p>html only with proper layout, no styling</p>
-        </section>
-        <nav>
-            <a href="../index.html">Home</a>
-            <a href="../contacto.html">Contacto</a>
-            <a href="../cursos.html">Cursos</a>
-            <a href="../tutoriales.html">Tutoriales</a>
-            <a href="../curriculum/curriculum.html">Curriculum</a>
-            <a href="../horari/horari.html">Horari</a>
-        </nav>
+            <p class="text-center">html only with proper layout, no styling</p>
+        </div>
     </header>
-    <main>
+    <main class="container">
         <section class="projects">
             <h2>Projects</h2>
             <ul>
@@ -34,7 +37,7 @@
                 <li>Product upcoming Page</li>
             </ul>
         </section>
-        <section class="work-experience">
+        <section class="work">
             <h2>Work experience</h2>
                 <div class="experience-item">
                     <h3>Roadmaps</h3>
@@ -59,15 +62,15 @@
     </main>
     <section class="reviews">
         <h2>Reviews from Teachers</h2>
-            <div class="review">
+            <div>
                 <p>"Miquel es un desarrollador medio. Siempre mostró gran dedicación en sus proyectos."</p>
                 <p>- Profesor</p>
             </div>
-            <div class="review">
+            <div>
                 <p>"Miquel es normal en el desarrollo frontend."</p>
                 <p>- Profesor</p>
             </div>
-            <div class="review">
+            <div >
                 <p>"Buen estudiante, con buena actitud"</p>
                 <p>- Profesor</p>
             </div>
