--- a/basic_html/basic_html.html
+++ b/basic_html/basic_html.html
@@ -60,23 +60,25 @@
                 <li>Mathematics for Developers</li>
         </section>
     </main>
-    <section class="reviews">
+    <section class="reviews-container">
         <h2>Reviews from Teachers</h2>
-            <div>
+        <div class="reviews">
+            <div class="review">
                 <p>"Miquel es un desarrollador medio. Siempre mostró gran dedicación en sus proyectos."</p>
                 <p>- Profesor</p>
             </div>
-            <div>
+            <div class="rewiew">
                 <p>"Miquel es normal en el desarrollo frontend."</p>
                 <p>- Profesor</p>
             </div>
-            <div >
+            <div class="reviews-item">
                 <p>"Buen estudiante, con buena actitud"</p>
                 <p>- Profesor</p>
             </div>
+        </div>
+        <footer class="footer">
+            <p>&copy;Todos los derechos reservados</p>
+        </footer>
     </section>
 </body>
-<footer>
-    <p>&copy;Todos los derechos reservados</p>
-</footer>
 </html>
