--- a/galeria/galeria.html
+++ b/galeria/galeria.html
@@ -13,7 +13,7 @@
             <a href="galeria.html">galeria</a>
         </nav>
     </header>
-    <div>
+    <div class="galeria">
         <img src="img/img1.jpg" alt="">
         <img src="img/img2.jpg" alt="">
         <img src="img/img3.jpg" alt="">
