--- a/galeria/galeria.html
+++ b/galeria/galeria.html
@@ -8,21 +8,21 @@
 </head>
 <body>
     <header class="conteiner">
-        <nav>
+        <nav class="nav-bar">
             <a href="../index.html">home</a>
             <a href="galeria.html">galeria</a>
         </nav>
     </header>
     <div class="galeria">
-        <img src="img/img1.jpg" alt="">
-        <img src="img/img2.jpg" alt="">
-        <img src="img/img3.jpg" alt="">
-        <img src="img/img4.jpg" alt="">
-        <img src="img/img5.jpg" alt="">
-        <img src="img/img6.jpg" alt="">
-        <img src="img/img7.jpg" alt="">
-        <img src="img/img8.jpg" alt="">
-        <img src="img/img9.jpg" alt="">
+        <img src="img/img1_thumbnail.jpg" alt="">
+        <img src="img/img2_thumbnail.jpg" alt="">
+        <img src="img/img3_thumbnail.jpg" alt="">
+        <img src="img/img4_thumbnail.jpg" alt="">
+        <img src="img/img5_thumbnail.jpg" alt="">
+        <img src="img/img6_thumbnail.jpg" alt="">
+        <img src="img/img7_thumbnail.jpg" alt="">
+        <img src="img/img8_thumbnail.jpg" alt="">
+        <img src="img/img9_thumbnail.jpg" alt="">
     </div>
 </body>
 </html>
