--- a/galeria/galeria.html
+++ b/galeria/galeria.html
@@ -11,6 +11,11 @@
         <nav class="nav-bar">
             <a href="../index.html">home</a>
             <a href="galeria.html">galeria</a>
+            <a href="contacto.html">contacto</a>
+            <a href="tutoriales.html">tutoriales</a>
+            <a href="curriculum/curriculum.html">curriculum</a>
+            <a href="horari/horari.html">horario</a>
+            <a href="basic_html/basic_html.html">basic-html</a>
         </nav>
     </header>
     <div class="galeria">
