--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <a href="contacto.html">Contacto</a>
         <a href="horari/horari.html">Horari</a>
         <a href="curriculum/curriculum.html">Curriculum</a>
-        <a href="basic_html/basic_html.html">Basic-html</a>ç
+        <a href="basic_html/basic_html.html">Basic-html</a>
         <a href="galeria/galeria.html">Galeria</a>
     </nav>
     <section>
