--- a/aplicar_estils/aplicar_estils.html
+++ b/aplicar_estils/aplicar_estils.html
@@ -5,6 +5,14 @@
     <link rel="stylesheet" type="" href="css/styles.css">
     </head>
 <body>
+    <nav>
+        <a href="../index.html">Home</a>
+        <a href="../landingpage/index.html">Tutoriales</a>
+        <a href="../basic_html/basic_html.html">Cursos</a>
+        <a href="../contacto.html">Contacto</a>
+        <a href="../galeria/galeria.html">Horari</a>
+        <a href="../horari/horari.html">Curriculum</a>
+    </nav>
     <h1>Exercici de selectors</h1>
 <p>aquest paràgraf no és dins un DIV</p>
 
