--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <a href="curriculum/curriculum.html">Curriculum</a>
         <a href="basic_html/basic_html.html">Basic-html</a>
         <a href="galeria/galeria.html">Galeria</a>
+        <a href="aplicar_estils/aplicar_estils.html">Aplicar estilos</a>
     </nav>
     <section>
         <h2>Formación online a tu ritmo</h2>
